--- a/src/main/webapp/elvish-composition-archive/chaered/vanwa-vayan.html
+++ b/src/main/webapp/elvish-composition-archive/chaered/vanwa-vayan.html
@@ -90,7 +90,7 @@ I was always going to hold her back</p>
 maybe someday I will build a boat<br/>
 I will be searching her alone beyond the ocean<br/>
 for [re]union, or her unwill/rejection,<br/>
-or the ocean takes me down, yeah<br/>
+or the ocean takes me down, yeah</p>
 
 <p>© 2024, Chaered.</p>
 
