--- a/src/main/webapp/elvish-composition-archive/luinyelle/i-korko.html
+++ b/src/main/webapp/elvish-composition-archive/luinyelle/i-korko.html
@@ -16,6 +16,8 @@
 
 <p>by Luinyelle</p>
 
+[An audio recording can be found on YouTube at this link: <a href="https://www.youtube.com/watch?v=lyIq8KTyFHQ&t=1s">https://www.youtube.com/watch?v=lyIq8KTyFHQ&t=1s</a>]
+
 <p><i>1) Anda né morende lumba, yá sannenye nípa, numba,<br/>
 Pá parmali vanwa ingoléve, sarmi aie ar elmendie –<br/>
 Yá lorunye, kas nulokila, enya hlarin tompe tokila,<br/>
