--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,14 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.8.10.23</p>
+<p>v0.8.10.23.1</p>
+<ul>
+<li>Follow up analysis for PE23, mostly focused on Sindarin.</li>
+<li>Numerous small changes to reflect new information in PE23.</li>
+<li>Revised orthography of Sindarin voiceless <i>w</i>, from <i>hw</i> to <i>wh</i>.</li>
+<li>Started putting table of contents for some more complex entries, to support deep links into entries.</li>
+</ul>
+<p>v0.8.10.23 (December 19, 2024)</p>
 <ul>
 <li>Basic data entry for PE23. This release does <u>not</u> revise the Eldamo grammar and phonological analysis to reflect the new information. Further analysis will come in future releases, and there are various XXX markers in this release that are placeholders indicating where things need to be revised.</li>
 </ul>
