--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
@@ -467,7 +467,7 @@
 <tr><th></th><th>Singular</th><th>Plural</th></tr>
 <tr><td>1st Person</td><td><i>-(i)nya</i> “my”</td><td><i>-(e)lma</i> “our (but not your)”</td></tr>
 <tr><td></td><td></td><td><i>-(e)lva</i> “our (including your)”</td></tr>
-<tr><td>2nd Person</td><td><i>-(i)tya</i> “your (familiar)”</td><td><i>-(e)lda</i> “your (plural)”</td></tr>
+<tr><td>2nd Person</td><td><i>-(e)tya</i> “your (familiar)”</td><td><i>-(e)lda</i> “your (plural)”</td></tr>
 <tr><td></td><td><i>-(e)lya</i> “your (polite)”</td><td></td></tr>
 <tr><td>3rd Person</td><td><i>-(r)ya</i> “his/her” ¹</td><td><i>-(i)nta</i> “their” ²</td></tr>
 </table>
@@ -478,7 +478,7 @@
 <li>Note ²: If you choose <i>-ltë</i> “they” for your 3rd. pl. subject suffix, you should use <i>-(i)lta</i> “their” as well for the possessive suffix.</li>
 </ul>
 
-<p>When added to nouns ending in a consonant, the possessive suffix requires a joining vowel as indicated by the parenthetic elements above: <i>atarinya</i> (<i>atar-inya</i>) “my father”, <i>atarelma</i> (<i>atar-elma</i>) “our father”, vs. <i>yondonya</i> (<i>yondo-nya</i>) “my son”, <i>yondolma</i> (<i>yondo-lma</i>) “our son”. <span class="advanced-topic">Speculative:</span> The exact vowel varies by suffix, generally <i>e</i> but with <i>i</i> for the suffixes <i>-nya, -tya, -nta</i> (or <i>-lta</i> if you prefer that). We don’t know the actual joining vowel in most cases, so many of these are educated guesses. See <a href="eldamo-intro-quenya-07.html#c7-1-1-3">Chapter 7, §7.1.1.3</a> for a more lengthy discussion.</p>
+<p>When added to nouns ending in a consonant, the possessive suffix requires a joining vowel as indicated by the parenthetic elements above: <i>atarinya</i> (<i>atar-inya</i>) “my father”, <i>atarelma</i> (<i>atar-elma</i>) “our father”, vs. <i>yondonya</i> (<i>yondo-nya</i>) “my son”, <i>yondolma</i> (<i>yondo-lma</i>) “our son”. The exact vowel varies by suffix, generally <i>e</i> but with <i>i</i> for the suffixes <i>-nya, -nta</i> (or <i>-lta</i> if you prefer that). See <a href="eldamo-intro-quenya-07.html#c7-1-1-3">Chapter 7, §7.1.1.3</a> for a more lengthy discussion.</p>
 
 <p>Again, 3rd sg. <i>-(r)ya</i> is an exception. It is <i>-rya</i> after vowels but <i>-ya</i> after consonants, as mentioned in Chapter 1, Section <a href="eldamo-intro-quenya-01.html#c1-2-3-3">1.2.3.3 Possessive Pronouns</a>. It is <i>atarya</i> (<i>atar-ya</i>) “his/her father” but <i>yondorya</i> (<i>yondo-rya</i>) “his/her son”.</p>
 
@@ -530,7 +530,7 @@
 <table>
 <tr><th></th><th>Indep.</th><th>Subject</th><th>Poss.</th></tr>
 <tr><td><nobr><b>1st sg.</b></nobr> “me, I, my”</td><td><i>ni</i></td><td><i>-n(yë)</i></td><td><i>-(i)nya</i></td></tr>
-<tr><td><nobr><b>2nd sg. fam.</b></nobr> “you, your (familiar)”</td><td><i>tye</i></td><td><i>-t(yë)</i> ¹</td><td><i>-(i)tya</i></td></tr>
+<tr><td><nobr><b>2nd sg. fam.</b></nobr> “you, your (familiar)”</td><td><i>tye</i></td><td><i>-t(yë)</i> ¹</td><td><i>-(e)tya</i></td></tr>
 <tr><td><nobr><b>2nd sg. pol.</b></nobr> “you, your (polite)”</td><td><i>lye</i></td><td><i>-l(yë)</i></td><td><i>-(e)lya</i></td></tr>
 <tr><td><nobr><b>3rd sg. anim.</b></nobr> “him/her, he/she, his/her”</td><td><i>se</i></td><td><i>-s(së)</i></td><td><i>-(r)ya</i> ²</td></tr>
 <tr><td><nobr><b>3rd sg. inan.</b></nobr> “it, its”</td><td><i>sa</i></td><td><i>-s(sa)</i></td><td>—</td></tr>
@@ -1146,7 +1146,7 @@ Maybe even thou shalt find it. Farewell!
 <table>
 <tr><th></th><th>Indep.</th><th>Subject</th><th>Poss.</th></tr>
 <tr><td><nobr><b>1st sg.</b></nobr> “me, I, my”</td><td><i>ni</i></td><td><i>-n(yë)</i></td><td><i>-(i)nya</i></td></tr>
-<tr><td><nobr><b>2nd sg. fam.</b></nobr> “you, your (familiar)”</td><td><i>tye</i></td><td><i>-t(yë)</i> ¹</td><td><i>-(i)tya</i></td></tr>
+<tr><td><nobr><b>2nd sg. fam.</b></nobr> “you, your (familiar)”</td><td><i>tye</i></td><td><i>-t(yë)</i> ¹</td><td><i>-(e)tya</i></td></tr>
 <tr><td><nobr><b>2nd sg. pol.</b></nobr> “you, your (polite)”</td><td><i>lye</i></td><td><i>-l(yë)</i></td><td><i>-(e)lya</i></td></tr>
 <tr><td><nobr><b>3rd sg. anim.</b></nobr> “him/her, he/she, his/her”</td><td><i>se</i></td><td><i>-s(së)</i></td><td><i>-(r)ya</i> ²</td></tr>
 <tr><td><nobr><b>3rd sg. inan.</b></nobr> “it, its”</td><td><i>sa</i></td><td><i>-s(sa)</i> ⁴</td><td>—</td></tr>
