--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-05.html
@@ -690,9 +690,10 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 
 <p>Like plurals, duals mark the difference between exclusive <i>met/-mmë</i> “us/we two (but not you)” vs. inclusive <i>vet/-nquë</i> “both of us/we two”. For independent pronouns, duals mark the distinction between familiar <i>tyet</i> “you two (affectionate)” vs. polite <i>let</i> “you two (polite)”. This distinction is not made for the 2nd person dual subject suffix <i>-stë</i>, though the pronoun is usually interpreted as familiar (VT49/51). As usual, the possessive forms are the same as the subject forms with <i>e</i> changed to <i>a</i>, using a joining vowel <i>(e)</i> or <i>(i)</i> after consonantal nouns as with other possessive suffixes: <i>mindoninqua</i> “both of our tower”. Conceivably there is a 3rd. du. inanimate subject form <i>-tta</i>, but it is sufficiently obscure that if it is exists then it is probably barely used. The independent 3rd dual pronoun <i>tu</i> is both animate and inanimate (VT49/51).</p>
 
-<p><span class="advanced-topic">Speculative:</span> Note that when the <u>possessed</u> item is dual rather than the possessor, it is likely that the possessive suffix is added first before the dual, as usual. The net result would be that possessed nouns are declined like vocalic nouns and use the <i>t</i>-dual: <i>hendinyat</i> (<i>hend-inya-t</i>) “my (pair of) eyes” not **<i>hendunya</i>.</p>
+<p>Note that when the <u>possessed</u> item is dual rather than the possessor, it is likely that the possessive suffix is added first before noun using <i>t</i>-duals, as usual: <i>ciryammat</i> (<i>cirya-mma-t</i>) “our pair of ships”. But nouns using <i>u</i>-duals are inflected like singular nouns, adding the possessive suffix to the dual form: <i>hlarunya</i> (<i>hlar-u-nya</i>) “my ears” (PE23/81).</p>
 
 <div class="advanced-topic">
+<p>The rules above for duals combined with possessive suffixes are based on notes on <i>Quenya Personal Pronouns</i> from 1948 (PE23/81), where the <i>u</i>-dual was actually <i>larunya</i> since in the 1940s the Quenya word for “ear” was <i>las</i> (<i>lar-</i>) rather than <i>hlas</i> (<i>hlar-</i>) as it was in the 1950s and 60s.</p>
 <p><b>Alternate Theories:</b> The dual pronouns above are mostly based on a pair of pronoun charts from 1968 (VT49/16, 51), leaning more on the one from VT49/51. The dual pronouns were particular unstable, though, and Tolkien revised them nearly every time he examined them. For example, the familiar dual form <i>-ngwë</i> from VT49/16 is a popular alternative to <i>-nquë</i> from VT49/51. The possessive dual forms given above are very likely the ones associated with the corresponding subject pronouns, but the joining vowels <i>(e)</i> or <i>(i)</i> after consonantal nouns are just guesses. Likewise, the ordering of possessive pronoun suffixes before dual suffixes is also a guess.</p>
 </div>
 
@@ -778,7 +779,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <li>Nouns with <i>t, d</i> before the final vowel use <i>u</i> instead: <i>alda</i> “a tree” → <i>aldu</i> “a pair of trees”.</li>
 <li>Some (but not all) body parts also use older <i>u</i>: <i>pirë</i> “a toe” → <i>piru</i> “a pair of toes”.</li>
 </ul></li>
-<li><span class="advanced-topic">Speculative:</span> Possessive pronouns are likely suffixed to the noun first, and thus typically use <i>t</i>-duals: <i>hendinyat</i> not **<i>hendunya</i>.</li>
+<li>Nouns using <i>t-duals</i> add the possessive suffix first (<i>ciryammat</i> = <i>cirya-mma-t</i> “our pair of ships”) but <i>u</i>-duals add the possessive suffix to the dual form (<i>hlarunya</i> = <i>hlar-u-nya</i> “my ears”).</li>
 <li>Non-pairs simply use <i>atta</i> “two”, with the noun in the singular: <i>atan atta</i> “two man [men]”.</li>
 <li>Pairs as a unit use <i>yúyo</i> “both”, with the noun in the singular: <i>yúyo atan</i> “both man [men]”.</li>
 </ul></li>
@@ -801,7 +802,7 @@ associated, as head and foot, top and bottom, up and down, young and old, men an
 <p>Translate the following to English:</p>
 
 <ol class="exercise-list">
-<li><i>Hendinyat tírat i orco atta.</i></li>
+<li><i>Hendunya tírat i orco atta.</i></li>
 <li><i>I nauco fanga ninquë yo sinda.</i></li>
 <li><i>Súlerya autëa peu i atano lenca.</i></li>
 <li><i>I hínat samit laurëa findë.</i></li>
@@ -1931,7 +1932,7 @@ to whom the air gives kisses.
 <li>Nouns with <i>t, d</i> before the final vowel use <i>u</i> instead: <i>alda</i> “a tree” → <i>aldu</i> “a pair of trees”.</li>
 <li>Some (but not all) body parts also use older <i>u</i>: <i>pirë</i> “a toe” → <i>piru</i> “a pair of toes”.</li>
 </ul></li>
-<li><span class="advanced-topic">Speculative:</span> Possessive pronouns are likely suffixed to the noun first, and thus typically use <i>t</i>-duals: <i>hendinyat</i> not **<i>hendunya</i>.</li>
+<li>Nouns using <i>t-duals</i> add the possessive suffix first (<i>ciryammat</i> = <i>cirya-mma-t</i> “our pair of ships”) but <i>u</i>-duals add the possessive suffix to the dual form (<i>hlarunya</i> = <i>hlar-u-nya</i> “my ears”).</li>
 <li>Non-pairs simply use <i>atta</i> “two”, with the noun in the singular: <i>atan atta</i> “two man [men]”.</li>
 <li>Pairs as a unit use <i>yúyo</i> “both”, with the noun in the singular: <i>yúyo atan</i> “both man [men]”.</li>
 </ul></li>
@@ -2043,7 +2044,7 @@ to whom the air gives kisses.
 </ol>
 
 <ol class="exercise-list" start="7">
-<li><i>Ma hlarelyat hlaret i arano quettar?</i></li>
+<li><i>Ma hlarulya hlaret i arano quettar?</i></li>
 <li><i>I aiwet lirnet i aldassë.</i></li>
 <li><i>Lambarya tyávë sára quëa.</i></li>
 <li><i>Aiwi vilir or nór yo ëar.</i></li>
@@ -2058,7 +2059,7 @@ to whom the air gives kisses.
 <p>Tengwar answers:</p>
 
 <ol class="exercise-list tengwar-block" start="7">
-<li><span class="transcribe" data-lang="q" data-value="Ma hlarelyat lastat i arano quettar?">Ma hlarelyat lastat i arano quettar?</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Ma hlarulya lastat i arano quettar?">Ma hlarulya lastat i arano quettar?</span></li>
 <li><span class="transcribe" data-lang="q" data-value="I aiwet lirnet i aldassë.">I aiwet lirnet i aldassë.</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Lambarya tyávë sára quëa.">Lambarya tyávë sára quëa.</span></li>
 <li><span class="transcribe" data-lang="q" data-value="Aiwi vilir or nór yo ëar.">Aiwi vilir or nór yo ëar.</span></li>
