--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-07.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-07.html
@@ -106,7 +106,7 @@
 <table>
 <tr><th></th><th>Indep.</th><th>Subject</th><th>Poss.</th></tr>
 <tr><td><nobr><b>1st sg.</b></nobr> “me, I, my”</td><td><i>ni</i></td><td><i>-n(yë)</i></td><td><i>-(i)nya</i></td></tr>
-<tr><td><nobr><b>2nd sg. fam.</b></nobr> “you, your (familiar)”</td><td><i>tye</i></td><td><i>-t(yë)</i></td><td><i>-(i)tya</i></td></tr>
+<tr><td><nobr><b>2nd sg. fam.</b></nobr> “you, your (familiar)”</td><td><i>tye</i></td><td><i>-t(yë)</i></td><td><i>-(e)tya</i></td></tr>
 <tr><td><nobr><b>2nd sg. pol.</b></nobr> “you, your (polite)”</td><td><i>lye</i></td><td><i>-l(yë)</i></td><td><i>-(e)lya</i></td></tr>
 <tr><td><nobr><b>3rd sg. anim.</b></nobr> “him/her, he/she, his/her”</td><td><i>se</i></td><td><i>-s(së)</i></td><td><i>-(r)ya</i> ¹</td></tr>
 <tr><td><nobr><b>3rd sg. inan.</b></nobr> “it, its”</td><td><i>sa</i></td><td><i>-s(sa)</i></td><td>—</td></tr>
@@ -133,7 +133,7 @@
 <table>
 <tr><th></th><th>Subject</th><th>Emph.</th><th>Src.</th></tr>
 <tr><td><nobr><b>1st sg.</b></nobr> “I”</td><td><i>-n(yë)</i></td><td><i>inyë</i></td><td>PE22/162</td></tr>
-<tr><td><nobr><b>2nd sg. fam.</b></nobr> “you (familiar)”</td><td><i>-t(yë)</i></td><td>*<i>ityë</i></td><td>—</td></tr>
+<tr><td><nobr><b>2nd sg. fam.</b></nobr> “you (familiar)”</td><td><i>-t(yë)</i></td><td>*<i>etyë</i></td><td>—</td></tr>
 <tr><td><nobr><b>2nd sg. pol.</b></nobr> “you (polite)”</td><td><i>-l(yë)</i></td><td><i>elyë</i></td><td>LotR/378</td></tr>
 <tr><td><nobr><b>3rd sg. anim.</b></nobr> “he/she”</td><td><i>-s(së)</i></td><td><i>issë</i> ¹</td><td>PE22/162</td></tr>
 <tr><td><nobr><b>3rd sg. inan.</b></nobr> “it”</td><td><i>-s(sa)</i></td><td>*<i>issa</i></td><td>—</td></tr>
@@ -156,13 +156,13 @@
 <li>Note ⁴: Where it appeared, <i>ettë</i> was an emphatic 3rd sg. pronoun. <span class="advanced-topic">Speculative:</span> After <i>-ttë</i> was used for the dual suffix (PE17/57; VT49/51), presumably emphatic <i>ettë</i> also became dual.</li>
 </ul>
 
-<p>The chart above includes the subject pronoun suffixes because there is a clear relationship between these suffixes and the emphatic pronouns: the emphatic pronouns are simply the subject suffixes with an <i>e</i> or <i>i</i> augment. Most of the emphatic pronouns start with <i>e</i>, but a few start with <i>i</i>: 1st person sg. (<i>inyë</i>), 2nd person polite sg. and dual (*<i>ityë</i>, <i>inquë</i>) and 3rd person sg. and pl. (<i>issë</i>, *<i>issa</i>, <i>intë</i>, *<i>inta</i>). <span class="advanced-topic">Speculative:</span> Forms marked with a * are unattested and therefore speculative; dual pronouns <i>emmë, ettë</i> are also speculative, since they are based on earlier non-dual pronouns that coincidentally have similar forms.</p>
+<p>The chart above includes the subject pronoun suffixes because there is a clear relationship between these suffixes and the emphatic pronouns: the emphatic pronouns are simply the subject suffixes with an <i>e</i> or <i>i</i> augment. Most of the emphatic pronouns start with <i>e</i>, but a few start with <i>i</i>: 1st person sg. (<i>inyë</i>), 2nd person dual (<i>inquë</i>) and 3rd person sg. and pl. (<i>issë</i>, *<i>issa</i>, <i>intë</i>, *<i>inta</i>). <span class="advanced-topic">Speculative:</span> Forms marked with a * are unattested and therefore speculative; dual pronouns <i>emmë, ettë</i> are also speculative, since they are based on earlier non-dual pronouns that coincidentally have similar forms.</p>
 
 <p><a id="c7-1-1-2"></a><b>7.1.1.2 Emphatic Pronoun Usage:</b> Emphatic pronouns can be used as both subjects and objects in a sentence: <i>nai elyë hiruvas</i> “may even you find it”, <i>aptanen issë</i> “I refused even him (or her)”. Since the emphatic pronoun is not suffixed to the verb, the verb must be plural (or dual) to agree with the pronoun: <i>intë túle<u>r</u> nöa</i> “it was they who arrived yesterday”, <i>emmë quéta<u>t</u> i aranen</i> “it is we two who are speaking to the king”. English doesn’t have the equivalent of an emphatic pronoun, so they are best translated with some alternate phrasing: <i>inyë</i> = “even I, it is I who ...”, etc.</p>
 
 <p>Quenya also sometimes uses stressed independent pronouns for emphasis, as in <i>melin sé mal ú hyé</i> “I love <u>him</u> but not <u>him</u> (the other)” (see section <a href="#c7-1-3-2">7.1.3.2 Fourth Person Pronouns</a> for an explanation of <i>hye</i>). These are analogous to how English can emphasize a pronoun simply by speaking it louder. These Quenya stressed pronouns have long vowels: <i>sé</i> vs. unstressed <i>se</i>. Presumably there is a hierarchy of emphasis, from least emphasized to most emphasized: <i>se, sé, issë</i>, “him, <u>him</u>, even him”.</p>
 
-<p><a id="c7-1-1-3"></a><b>7.1.1.3 Emphatic vs. Possessive Pronouns:</b> As noted in <a href="eldamo-intro-quenya-03.html#c3-2-3">Chapter 3, Section §3.2.3</a>, possessive pronoun suffixes have joining vowels when added to consonantal nouns, and the vowel may be <i>i</i> or <i>e</i>, depending on the pronoun suffix. We don’t know the reasons for when the two different joining vowels are used, but in the few examples where we have both, they coincide with the same vowel augment seen in emphatic pronouns:</p>
+<p><a id="c7-1-1-3"></a><b>7.1.1.3 Emphatic vs. Possessive Pronouns:</b> As noted in <a href="eldamo-intro-quenya-03.html#c3-2-3">Chapter 3, Section §3.2.3</a>, possessive pronoun suffixes have joining vowels when added to consonantal nouns, and the vowel may be <i>i</i> or <i>e</i>, depending on the pronoun suffix. In <i>Quenya Personal Pronoun</i> from the late 1940s, Tolkien said this joining vowel is the same as the one used in emphatic pronouns. Many of the exact pronouns used in this document differ from those pronouns in Tolkien’s later writings, but this rule for joining vowels is consistent with later examples:</p>
 
 <ul>
 <li><i>inyë</i> “even I” (PE22/162), <i>atar-inya</i> “my father” (VT47/26).</li>
@@ -170,10 +170,10 @@
 <li><i>intë</i> “even they” (PE17/75), <i>-(i)nta</i> “their” (VT49/17).</li>
 </ul>
 
-<p><span class="advanced-topic">Speculative:</span> These three examples are all we have to work from, but based on these I assume that the joining vowel for possessive suffixes is always identical to the vowel augment for the corresponding emphatic pronoun (except for 3rd sg. <i>-rya</i> “his/her”, where the form after consonants is <i>-ya</i>). This assumption is reflected in the possessive pronoun suffix charts from Chapter 3 and Chapter 5 (duals), also given above.</p>
+<p>The exception is <i>-rya</i> “his, her, its”, which uses <i>-ya</i> with consonantal nouns</p>
 
 <div class="advanced-topic">
-<p><a id="c7-1-1-4"></a><b>7.1.1.4 How do we know this?</b> We don’t have a document where Tolkien described and listed a full set of emphatic pronouns (outside of early writings from the 1920s with forms that were clearly abandoned later), so the emphatic pronouns used in this course are based on individual examples from various different documents, with page references in the emphatic pronoun chart above. Other emphatic forms are reconstructed by analogy with subject suffixes.</p>
+<p><a id="c7-1-1-4"></a><b>7.1.1.4 How do we know this?</b> We don’t have a document where Tolkien described and listed a full set of emphatic pronouns (outside of early writings from the 1920s and 1940s with many forms that were clearly abandoned later), so the emphatic pronouns used in this course are based on individual examples from various different documents from the 1950s and 60s, with page references in the emphatic pronoun chart above. Other emphatic forms are reconstructed by analogy with subject suffixes.</p>
 </div>
 
 <h2><a id="c7-1-2"></a>7.1.2 Colloquial Possessives</h2>
@@ -270,7 +270,7 @@
 <li><b>inyë</b> <i>pron.</i> “even I”</li>
 <li>*<b>issa</b> <i>pron.</i> “even it”</li>
 <li><b>issë</b> <i>pron.</i> “even he/she”</li>
-<li>*<b>ityë</b> <i>pron.</i> “even you (familiar)”</li>
+<li>*<b>etyë</b> <i>pron.</i> “even you (familiar)”</li>
 </ul>
 
 <p>Stressed independent pronouns (with longer vowels) like <i>sé</i> are also emphatic, but less so than fully emphatic pronouns.</p>
@@ -1105,7 +1105,7 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 <li><b>inyë</b> <i>pron.</i> “even I”</li>
 <li>*<b>issa</b> <i>pron.</i> “even it”</li>
 <li><b>issë</b> <i>pron.</i> “even he/she”</li>
-<li>*<b>ityë</b> <i>pron.</i> “even you (familiar)”</li>
+<li>*<b>etyë</b> <i>pron.</i> “even you (familiar)”</li>
 </ul>
 
 <p>Stressed independent pronouns (with longer vowels) like <i>sé</i> are also emphatic, but less so than fully emphatic pronouns.</p>
