--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-09.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-09.html
@@ -703,14 +703,14 @@
 <ul>
 <li><b><a href="#c9-4-1-1">9.4.1.1 <i>an</i>-intensives</a></b></li>
 <li><b><a href="#c9-4-1-2">9.4.1.2 <i>ar</i>-superlatives</a></b></li>
-<li><b><a href="#c9-4-1-3">9.4.1.3 <i>am</i>-intensives</a></b></li>
+<li class="advanced-topic"><b><a href="#c9-4-1-3">9.4.1.3 <i>am</i>-intensives</a></b></li>
 <li><b><a href="#c9-4-1-4">9.4.1.4 Better and Best</a></b></li>
 <li class="advanced-topic"><b><a href="#c9-4-1-5">9.4.1.5 How do we know this?</a></b></li>
 </ul>
 
-<p>In Tolkien’s later writings, he used three different prefixes for intensives: <i>an(a)-</i>, <i>ar(i)-</i> and <i>am(a)-</i>.</p>
+<p>For most of Tolkien’s later writings, he used two different prefixes for intensives: <i>an(a)-</i> and <i>ar(i)-</i>.</p>
 
-<p><a id="c9-4-1-1"></a><b>9.4.1.1 <i>an</i>-intensives:</b> Prior to 1967, Tolkien used the prefix <i>an(a)-</i> “very” for intensive forms (VT45/36; PE17/56-7, 146; PE19/78). The exact form of this prefix depends on the initial consonant of the adjective to which the prefix is added. The exact rules varied over time, but I recommend the following:</p>
+<p><a id="c9-4-1-1"></a><b>9.4.1.1 <i>an</i>-intensives:</b> Tolkien generally used the prefix <i>an(a)-</i> “very” for intensive forms (VT45/36; PE17/56-7, 146; PE19/78). The exact form of this prefix depends on the initial consonant of the adjective to which the prefix is added. The exact rules varied over time, but I recommend the following:</p>
 
 <ul>
 <li>The prefix is <i>an-</i> before vowels and most consonants.
@@ -731,6 +731,7 @@
 
 <p>As an example of the last of these, Tolkien gave <i>aristorna</i> “most hard” from <i>torna</i> “hard” (ancient <i>storna</i>). More ordinary examples include: <i>arcalima</i> “most bright” = (<i>ar</i> + <i>calima</i>), <i>aryára</i> “most old”, <i>armelda</i> “most beloved”, <i>araiqua</i> “most steep”. Strictly speaking, the <i>ar-</i> prefix is a stronger intensive (“exceedingly”), but in practice is functionly a superlative (“most”).</p>
 
+<div class="advanced-topic">
 <p><a id="c9-4-1-3"></a><b>9.4.1.3 <i>am</i>-intensives:</b> In 1967 Tolkien introduced a new system of intensives based on a prefix <i>am(a)-</i>. Again, the form depends on the initial consonant of the adjective:</p>
 
 <ul>
@@ -749,7 +750,8 @@
 <li>The prefix is <i>ama-</i> rather than <i>ana-</i> before <i>l, r, hl, hr</i>.</li>
 </ul>
 
-<p>In Tolkien’s discussion of the <i>am</i>-intensives, there was no mention of the <i>ar</i>-superlatives, so the two ideas may not be compatible.</p>
+<p>Tolkien only used <i>am</i>-intensives in this 1967 note and there is an <i>an</i>-intensive in notes from 1969: <i>anírime</i> “most beautiful” first published in 2024 (PE23/133). Therefore, I recommend against using this system. I include it here only because this system was somewhat popular in Neo-Quenya prior to the 2024 publication of <i>anírime</i>, so you may see it in other’s writings.</p>
+</div>
 
 <p><a id="c9-4-1-4"></a><b>9.4.1.4 Better and Best:</b> As part of the 1957-59 paradigm described above, Tolkien had a special intensive form of the adjective <i>mára</i> “good”, whose intensive was <i>arya</i> “excelling”, of the same origin as the superlative prefix <i>ar(i)-</i> (PE17/56-7). This form also functions as the comparative for <i>mára</i> in the same way as other intensive forms, so it also means “better” (PE17/147). Finally it can be used with the definite article <i>i</i> and a genitive to function as a superlative “best”, such as <i>Aragorn i arya atanion</i> “Aragorn [is] the best of Men” (PE17/57). See section <a href="#c9-4-2-3">9.4.2.3 Superlative Expressions</a> below for similar examples.</li></p>
 
@@ -758,7 +760,7 @@
 
 <p>Tolkien gave a different explanation of the <i>an</i>-intensives in Quenya Notes written in 1957, connecting it to the root √<i>AN</i> “to(wards)” with an extended sense “plu[s]” (PE17/146). In notes written around this time he described a system of <i>an</i>-intensives and <i>ar</i>-superlatives (PE17/56-57). Tolkien didn’t give many details on how the prefix <i>an-</i> combines with other consonants, saying only “<i>an</i> occur[s] before agreeable consonants ... <i>ana</i> before groups”. He also said that the form <i>an</i> was only used before a light syllable, as in <i>ancalima</i> “very bright”, where the syllable <i>cal</i> is light because it has a short vowel followed by a single consonant. Before a heavy syllable the longer suffix was <i>ana-</i>, as in <i>anacarnë</i> “very red” where <i>carn-</i> is heavy because it is followed by a consonant cluster (Tolkien’s actual example was <i>anamelda</i> “very beloved”). The prefix <i>ar(i)-</i> behaved similarly: <i>arcalima</i> “most bright” vs. <i>aricarnë</i> “most red” (vs. Tolkien’s example <i>arimelda</i>).</p>
 
-<p>Tolkien revisited the topic of comparison again in notes probably written around 1967 (PE17/90-94). He first considered a new explanation of <i>an</i>-intensives as connected to the adjective <i>anda</i> “long”, but abandoned this idea and switched to a new prefix <i>am(a)-</i> connected to a root √<i>AMA</i> meaning “addition, increase, plus” (elsewhere Tolkien said √<i>AM</i> meant “up” and these meanings may have been related). Tolkien gave a quite detailed explanation of how this prefix interacted with various initial consonants (PE17/92 item #3). The consonant-combination rules I gave above for both <i>an</i>-intensives and <i>am</i>-intensives are based on these 1967 notes.</p>
+<p>Tolkien revisited the topic of comparison again in notes probably written around 1967 (PE17/90-94). He first considered a new explanation of <i>an</i>-intensives as connected to the adjective <i>anda</i> “long”, but abandoned this idea and switched to a new prefix <i>am(a)-</i> connected to a root √<i>AMA</i> meaning “addition, increase, plus” (elsewhere Tolkien said √<i>AM</i> meant “up” and these meanings may have been related). Tolkien gave a quite detailed explanation of how this prefix interacted with various initial consonants (PE17/92 item #3). The consonant-combination rules I gave above for both <i>an</i>-intensives and <i>am</i>-intensives are based on these 1967 notes. However, given 1969 <i>anírime</i> (PE23/133), the <i>am</i>-intensives themselves seem to have been a transient idea.</p>
 </div>
 
 <h2><a id="c9-4-2"></a>9.4.2 Making Comparisons</h2>
