--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-12.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-12.html
@@ -264,7 +264,7 @@
 <li>Nouns with <i>t, d</i> before the final vowel use <i>u</i> instead: <i>alda</i> “a tree” → <i>aldu</i> “a pair of trees”.</li>
 <li>Some (but not all) body parts also use older <i>u</i>: <i>pirë</i> “a toe” → <i>piru</i> “a pair of toes”.</li>
 </ul></li>
-<li><span class="advanced-topic">Speculative:</span> Possessive pronouns are likely suffixed to the noun first, and thus typically use <i>t</i>-duals: <i>hendinyat</i> not **<i>hendunya</i>.</li>
+<li>Nouns using <i>t-duals</i> add the possessive suffix first (<i>ciryammat</i> = <i>cirya-mma-t</i> “our pair of ships”) but <i>u</i>-duals add the possessive suffix to the dual form (<i>hlarunya</i> = <i>hlar-u-nya</i> “my ears”).</li>
 <li>Non-pairs simply use <i>atta</i> “two”, with the noun in the singular: <i>atan atta</i> “two man [men]” (see <a href="#c12-8-6">section §12.8.6</a> below).</li>
 <li>Pairs as a unit use <i>yúyo</i> “both”, with the noun in the singular: <i>yúyo atan</i> “both man [men]”.</li>
 </ul>
@@ -449,7 +449,7 @@
 <table>
 <tr><th></th><th>Indep.</th><th>Subject</th><th>Poss.</th><th>Emph.</th></tr>
 <tr><td><nobr><b>1st sg.</b></nobr> “me, I, my”</td><td><i>ni</i></td><td><i>-n(yë)</i></td><td><i>-(i)nya</i></td><td><i>inyë</i></td></tr>
-<tr><td><nobr><b>2nd sg. fam.</b></nobr> “you, your (familiar)”</td><td><i>tye</i></td><td><i>-t(yë)</i> ¹</td><td><i>-(i)tya</i></td><td>*<i>ityë</i></td></tr>
+<tr><td><nobr><b>2nd sg. fam.</b></nobr> “you, your (familiar)”</td><td><i>tye</i></td><td><i>-t(yë)</i> ¹</td><td><i>-(e)tya</i></td><td>*<i>etyë</i></td></tr>
 <tr><td><nobr><b>2nd sg. pol.</b></nobr> “you, your (polite)”</td><td><i>lye</i></td><td><i>-l(yë)</i></td><td><i>-(e)lya</i></td><td><i>elyë</i></td></tr>
 <tr><td><nobr><b>3rd sg. anim.</b></nobr> “him/her, he/she, his/her”</td><td><i>se</i></td><td><i>-s(së)</i></td><td><i>-(r)ya</i> ²</td><td><i>issë</i></td></tr>
 <tr><td><nobr><b>3rd sg. inan.</b></nobr> “it, its”</td><td><i>sa</i></td><td><i>-s(sa)</i> ⁴</td><td>—</td><td>*<i>issa</i></td></tr>
@@ -467,7 +467,7 @@
 
 <ul>
 <li>Note ¹: Singular subject pronouns have short and long forms, with the short form being more common unless object suffixes are added. The exception is <i>-t(yë)</i>, where the long form <i>-tyë</i> is much more common and short <i>-t</i> should generally be avoided.</li>
-<li>Note ²: The possessive suffixes require a joining vowel when added to a noun ending in a consonant. The exception is <i>-(r)ya</i>, which uses <i>-ya</i> after a consonant and <i>-rya</i> after a vowel. <span class="advanced-topic">Speculative:</span> The joining vowel seems to be the same as the initial vowel of the emphatic form.</li>
+<li>Note ²: The possessive suffixes require a joining vowel when added to a noun ending in a consonant, which is the same as the initial vowel of the emphatic form. The exception is <i>-(r)ya</i>, which uses <i>-ya</i> after a consonant and <i>-rya</i> after a vowel.</li>
 <li>Note ³: Popular variants of the 3rd pl. pronoun suffixes are <i>-ltë, -(i)lta</i>; both <i>-ltë</i> and <i>-ntë</i> were used often enough by Tolkien that it is hard to say which he preferred. This course uses <i>-ntë</i> throughout for consistency.</li>
 <li>Note ⁴: The inanimate subject suffixes appear only in one chart from the late 1950s or early 1960s (PE17/57), making them more questionable. Many people prefer to use the animate suffixes <i>-s(se)</i> and <i>-nte/-lte</i> for inanimates as well.</li>
 </ul>
