--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-13.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-13.html
@@ -401,7 +401,7 @@
 <li>*<b>issa</b> <i>pron.</i> “even it”</li>
 <li><b>issë</b> <i>pron.</i> “even he/she”</li>
 <li><b>ista-</b> <i>v.</i> “to know”<ul><li><i>pa.t.</i> <b>sintë</b> “knew”</li></ul></li>
-<li>*<b>ityë</b> <i>pron.</i> “even you (familiar)”</li>
+<li>*<b>etyë</b> <i>pron.</i> “even you (familiar)”</li>
 </ul>
 
 <hr/>
