--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-14.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-14.html
@@ -1362,7 +1362,7 @@
 <li>“yonder” <i>adv.</i> <b>en</b></li>
 <li>“you (familiar object)” <i>pron.</i> <b>tye</b></li>
 <li>“you (familiar subject)” <i>suf.</i> <b>-tyë</b></li>
-<li>“you (familiar, emphatic)” <i>pron.</i> *<b>ityë</b></li>
+<li>“you (familiar, emphatic)” <i>pron.</i> *<b>etyë</b></li>
 <li>“you (plural object)” <i>pron.</i> <b>le</b></li>
 <li>“you (plural subject)” <i>suf.</i> <b>-ldë</b></li>
 <li>“you (plural, emphatic)” <i>pron.</i> *<b>eldë</b></li>
