--- a/src/main/webapp/intro-quenya/index.html
+++ b/src/main/webapp/intro-quenya/index.html
@@ -18,7 +18,7 @@
 
 <center><h1><u>Eldamo Introductory Quenya</u></h1></center>
 <center>by Paul Strack</center>
-<center>version 1.0.5 (Dec 2, 2023)</center>
+<center>version 1.1.0 (March xxx, 2025)</center>
 
 <ul>
 <li><b><a href="eldamo-intro-quenya-01.html">Chapter 1</a></b> - Course Introduction, Quenya Crash Course</li>
@@ -35,7 +35,7 @@
 <li><b><a href="eldamo-intro-quenya-12.html">Chapter 12</a></b> - Grammar Summary</li>
 <li><b><a href="eldamo-intro-quenya-13.html">Chapter 13</a></b> - Quenya to English Glossary</li>
 <li><b><a href="eldamo-intro-quenya-14.html">Chapter 14</a></b> - English to Quenya Glossary</li>
-<li><b><a href="eldamo-intro-quenya-15.html">Chapter 15</a></b> - All Exercises</li>
+<li><b><a href="eldamo-intro-quenya-15.html">Chapter 15</a></b> - All Exercises and <a href="eldamo-intro-quenya-15.html#v">Version History</a></li>
 </ul>
 
 <a id="memrise"></a><center><h1><u>Memrise Vocabulary Courses</u></h1></center>
