--- a/src/main/webapp/elvish-composition-archive/index.html
+++ b/src/main/webapp/elvish-composition-archive/index.html
@@ -8,7 +8,7 @@
 
 <h1>Elvish Composition Archive</h1>
 
-<p>Version 0.2.2 - Dec 18, 2024</p>
+<p>Version 0.2.4 - Feb 2, 2024</p>
 
 <p>This web page and its content are a mirror of the <i>Elvish Composition Archive</i>: a collection of works in Tolkien’s Elvish languages, Quenya and Sindarin. Content is organized alphabetically by <a href="#authors">author</a>. If you want to get (or even host) your own copy of the archive, see the section on <a href="#licensing">mirrors, downloads and licensing</a>. If you want to contribute to the archive, see the section on <a href="#submissions">submissions</a>.</p>
 
@@ -38,6 +38,7 @@
 
 <ul>
 <li><a href="rinor/celebrinor.html">Celebrinor</a> (Sindarin, 2024)</li>
+<li><a href="rinor/glorfinniel-ah-i-medli-neledh.html">Glorfinniel ah i·Medli Neledh</a> (Sindarin, 2025)</li>
 </ul>
 
 <h3><a id="chaered"></a>Chaered</h3>
@@ -49,6 +50,8 @@
 <li><a href="chaered/ninya-masta.html">Ninya Masta</a> (Quenya, 2024)</li>
 <li><a href="chaered/boy-vs-orc.html">Boy vs. Orc</a> (Quenya, 2024)</li>
 <li><a href="chaered/vanwa-vayan.html">Vanwa Váyan</a> (Quenya, 2024)</li>
+<li><a href="chaered/aldun-linde.html">Aldun Linde</a> (Quenya, 2025)</li>
+<li><a href="chaered/princess-and-the-pea.html">The Princess and the Pea</a> (Quenya, 2025)</li>
 </ul>
 
 <h3><a id="delle"></a>Delle</h3>
