--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-15.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-15.html
@@ -40,6 +40,7 @@
 <li><b><a href="#x8">Chapter 8 Exercises</a></b></li>
 <li><b><a href="#x9">Chapter 9 Exercises</a></b></li>
 <li><b><a href="#x10">Chapter 10 Exercises</a></b></li>
+<li><b><a href="#v">Version History</a></b></li>
 </ul>
 
 <hr/>
@@ -690,7 +691,7 @@
 <p>Translate the following to English:</p>
 
 <ol class="exercise-list">
-<li><i>Hendinyat tírat i orco atta.</i></li>
+<li><i>Hendunya tírat i orco atta.</i></li>
 <li><i>I nauco fanga ninquë yo sinda.</i></li>
 <li><i>Súlerya autëa peu i atano lenca.</i></li>
 <li><i>I hínat samit laurëa findë.</i></li>
@@ -1305,6 +1306,33 @@
 </ol>
 
 <p>Answers are in <a href="eldamo-intro-quenya-10.html#a10-4">Answer Key 10.4</a> at the end of Chapter 10.</p>
+
+<h2><a id="v"></a>Version History</h2>
+
+<p>This version history only discusses major changes to grammar (major versions), not minor edits and corrections of typos.</p>
+
+<ul>
+<li><a href="#v1-0">Version 1.0</a> (March 2023)</li>
+<li><a href="#v1-1">Version 1.1</a> (April 2025)</li>
+</ul>
+
+<h3><a name="v1-0"></a>Version 1.0 (March 2023)</h3>
+
+<ul>
+<li>First Release.</li>
+</ul>
+
+<h3><a name="v1-1"></a>Version 1.1 (April 2025)</h3>
+
+<ul>
+<li><a href="eldamo-intro-quenya-02.html#c2-5-2">Section 2.5.2</a>: Removed “!” from <i>nil-</i>, since it is now attested and thus no longer a neologism (PE23/133). The discussion of neologisms was adjusted to match.</li>
+<li><a href="eldamo-intro-quenya-03.html#c3-2-3">Section 3.2.3</a>: Changed possessive joining vowel <i>-(i)tya</i> &gt;&gt; <i>-(e)tya</i> to be consistent with PE23/81. Removed “Speculative” from the rule that the joining vowel is based on the emphatic pronoun, since this was confirmed on PE23/81.</li>
+<li><a href="eldamo-intro-quenya-05.html#c5-2-2">Section 5.2.2</a>: Modified how possessive suffixes combine with <i>u</i>-duals to align with PE23/81: <i>hendunya</i>, not **<i>hendinyat</i>. No change to <i>t</i>-duals.</li>
+<li><a href="eldamo-intro-quenya-06.html#c6-2-1-1">Section 6.2.1.1</a>: Added Tolkien quote indicating a definite reference to a prior partitive plural is possible: “This form [the partitive plural] could also (but infrequently) be used with the article (when the group has already been referred to)” (PE23/134).</li>
+<li><a href="eldamo-intro-quenya-07.html#c7-1-1-1">Section 7.1.1.1</a>: Emphatic 2nd personal familiar was revised from *<i>ityë</i> to *<i>etyë</i> to be consistent with the vowel used on <i>Quenya Personal Pronouns</i> from the late 1940s (PE23/78, 81).</li>
+<li><a href="eldamo-intro-quenya-07.html#c7-1-1-3">Section 7.1.1.3</a>: Removed “Speculative” from the rule that the joining vowel is based on the emphatic pronoun, since this was confirmed on PE23/81.</li>
+<li><a href="eldamo-intro-quenya-09.html#c9-4-1-3">Section 9.4.1.3</a>: Converted <i>am</i>-intensives to an advanced topic since 1969 <i>anírime</i> (PE23/133) indicates they were a transient idea.</li>
+</ul>
 
 </body>
 </html>
