--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,10 +10,14 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.8.10.23.1</p>
+
+<p>v0.8.11</p>
+<ul>
+<li>Finished Dictionary entries for semantic category 11 = Possession and Trade.</li>
+</ul>
+<p>v0.8.10.23.1 (March 24, 2025)</p>
 <ul>
 <li>Follow up analysis for PE23, mostly focused on Sindarin.</li>
-<li>Numerous small changes to reflect new information in PE23.</li>
 <li>Revised orthography of Sindarin voiceless <i>w</i>, from <i>hw</i> to <i>wh</i>.</li>
 <li>Started putting table of contents for some more complex entries, to support deep links into entries.</li>
 </ul>
