--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
@@ -419,7 +419,7 @@
 
 <p><a id="c3-2-1-1"></a><b>3.2.1.1 Pronouns and Noun Cases:</b> The table above uses the English object pronoun forms as the translation of Quenya independent pronouns, “me” rather than “I”. That’s because for subjects, Quenya generally uses pronoun suffixes, as discussed in the next section.</p>
 
-<p>However, the independent (non-suffixal) forms are used when the pronoun itself needs to be modified, generally by putting it into a noun case. Pronouns can take case suffixes just as if they were nouns ending in a vowel: <i>lyenna</i> “to/onto/upon you” (allative), <i>messë</i> “in/at/on us” (locative), <i>ten</i> “to/for them” (dative). The only real difference is that pronouns always take the singular case suffix even if they are a plural pronoun: locative <i>messë</i> not **<i>messen</i>, dative <i>ten</i> not **<i>tein</i> or **<i>tin</i>.</p>
+<p>However, the independent (non-suffixal) forms are used when the pronoun itself needs to be modified, generally by putting it into a noun case. Pronouns can take case suffixes just as if they were nouns ending in a vowel: <i>lyenna</i> “to/onto/upon you” (allative), <i>messë</i> “in/at/on us” (locative), <i>ten</i> “to/for them” (dative). The only real difference is that pronouns generally take the singular case suffix even if they are a plural pronoun: locative <i>messë</i> rather than <i>messen</i>, dative <i>ten</i> rather than <i>tein</i> or <i>tin</i>.</p>
 
 <p>Some examples:</p>
 
