--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-10.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-10.html
@@ -382,7 +382,7 @@
 
 <ul>
 <li><i>cenuvan <u>en</u></i> “I will see you <u>then</u> (future)”.</li>
-<li><i>táras <u>en</u></i> “he/she is standing <u>yonder</u> (in that distant place)”.</li>
+<li><i>táras <u>en</u></i> (or <i>enta</i>) “he/she is standing <u>yonder</u> (in that distant place)”.</li>
 </ul>
 
 <p><a id="c10-2-1-2"></a><b>10.2.1.2 Demonstrative Adjectives:</b> All three elements have adjectival forms: <i>sina</i> “this”, <i>tana</i> “that”, <i>enta</i> “that yonder”. All three adjectives are used in similar ways:</p>
@@ -393,7 +393,7 @@
 <li><i>á menë <u>enta</u> ambonna</i> “go to <u>yonder</u> hill”.</li>
 </ul>
 
-<p>Though we have no examples, it likely the demonstrative adjectives are declined into the plural to agree with the noun: <i>sinë cirmar</i> “these knives”, <i>tanë macili</i> “those swords”. All three adjectives may also be used as pronouns. This is especially the case for <i>enta</i>, whose independent element <i>en</i> is used almost exclusively as an adverb:</p>
+<p>Though we have no examples, it is likely the demonstrative adjectives are declined into the plural to agree with the noun: <i>sinë cirmar</i> “these knives”, <i>tanë macili</i> “those swords”. All three adjectives may also be used as pronouns. This is especially the case for <i>enta</i>, whose independent element <i>en</i> is used almost exclusively as an adverb:</p>
 
 <ul>
 <li><i>antuvan lyen sina</i> “I will give you this”.</li>
