--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-15.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-15.html
@@ -1309,11 +1309,12 @@
 
 <h2><a id="v"></a>Version History</h2>
 
-<p>This version history only discusses major changes to grammar (major versions), not minor edits and corrections of typos.</p>
+<p>This version history only discusses major changes to grammar, not minor edits and corrections of typos.</p>
 
 <ul>
 <li><a href="#v1-0">Version 1.0</a> (March 2023)</li>
 <li><a href="#v1-1">Version 1.1</a> (April 2025)</li>
+<li><a href="#v1-1-1">Version 1.1.1</a> (July 2025)</li>
 </ul>
 
 <h3><a name="v1-0"></a>Version 1.0 (March 2023)</h3>
@@ -1332,6 +1333,12 @@
 <li><a href="eldamo-intro-quenya-07.html#c7-1-1-1">Section 7.1.1.1</a>: Emphatic 2nd personal familiar was revised from *<i>ityë</i> to *<i>etyë</i> to be consistent with the vowel used on <i>Quenya Personal Pronouns</i> from the late 1940s (PE23/78, 81).</li>
 <li><a href="eldamo-intro-quenya-07.html#c7-1-1-3">Section 7.1.1.3</a>: Removed “Speculative” from the rule that the joining vowel is based on the emphatic pronoun, since this was confirmed on PE23/81.</li>
 <li><a href="eldamo-intro-quenya-09.html#c9-4-1-3">Section 9.4.1.3</a>: Converted <i>am</i>-intensives to an advanced topic since 1969 <i>anírime</i> (PE23/133) indicates they were a transient idea.</li>
+</ul>
+
+<h3><a name="v1-1-1"></a>Version 1.1.1 (June 2025)</h3>
+
+<ul>
+<li><a href="eldamo-intro-quenya-03.html#c3-2-1-1">Section 3.2.1.1</a>: Relaxed the wording on inflected personal pronouns not using plural suffix, since notes from 1948 indicate this is possible (PE23/79). I still don’t recommend it, though.</li>
 </ul>
 
 </body>
