--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -11,7 +11,11 @@
 <hr>
 <h1>Version History</h1>
 
-<p>v0.8.11</p>
+<p>v0.8.11.1</p>
+<ul>
+<li>Follow up on PE23, documenting Quenya correlatives.</li>
+</ul>
+<p>v0.8.11 (May 3, 2025)</p>
 <ul>
 <li>Finished Dictionary entries for semantic category 11 = Possession and Trade.</li>
 </ul>
